{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 270,
  "lineage": "d1d48081-3487-aa1f-eb51-2eed48aa5167",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "engidoor-igw-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:547789976793:internet-gateway/igw-0fd9c5c784013131a",
            "id": "igw-0fd9c5c784013131a",
            "owner_id": "547789976793",
            "tags": {
              "Name": "engidoor-igw-tf"
            },
            "tags_all": {
              "Name": "engidoor-igw-tf"
            },
            "vpc_id": "vpc-052dd800d5475d1c3"
          },
          "dependencies": [
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "engidoor-alb-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:loadbalancer/app/engidoor-alb-tf/e5238dfdb4c195d2",
            "arn_suffix": "app/engidoor-alb-tf/e5238dfdb4c195d2",
            "dns_name": "engidoor-alb-tf-885384229.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:loadbalancer/app/engidoor-alb-tf/e5238dfdb4c195d2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "engidoor-alb-tf",
            "security_groups": [
              "sg-0b709e3614f70f375"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-017a96f486d44fda4"
              },
              {
                "subnet_id": "subnet-02bc59638682d063a"
              }
            ],
            "subnets": [
              "subnet-017a96f486d44fda4",
              "subnet-02bc59638682d063a"
            ],
            "tags": {
              "Name": "engidoor-alb-tf"
            },
            "tags_all": {
              "Name": "engidoor-alb-tf"
            },
            "vpc_id": "vpc-052dd800d5475d1c3",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_subnet.engidoor-front-subnet-1a-tf",
            "aws_subnet.engidoor-front-subnet-1c-tf",
            "aws_vpc.engidoor-vpc-tf",
            "aws_security_group.engidoor-alb-sg-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "engidoor-back-alb-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:loadbalancer/app/engidoor-back-alb-tf/1b6efea128013704",
            "arn_suffix": "app/engidoor-back-alb-tf/1b6efea128013704",
            "dns_name": "engidoor-back-alb-tf-144169429.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:loadbalancer/app/engidoor-back-alb-tf/1b6efea128013704",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "engidoor-back-alb-tf",
            "security_groups": [
              "sg-0b709e3614f70f375"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-039a1710852bb7139"
              },
              {
                "subnet_id": "subnet-0d18332c424b061b4"
              }
            ],
            "subnets": [
              "subnet-039a1710852bb7139",
              "subnet-0d18332c424b061b4"
            ],
            "tags": {
              "Name": "engidoor-back-alb-tf"
            },
            "tags_all": {
              "Name": "engidoor-back-alb-tf"
            },
            "vpc_id": "vpc-052dd800d5475d1c3",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.engidoor-alb-sg-tf",
            "aws_subnet.engidoor-back-subnet-1a-tf",
            "aws_subnet.engidoor-back-subnet-1c-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "engidoor-back-http-listener-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:listener/app/engidoor-back-alb-tf/1b6efea128013704/5fcb547f709fb647",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:targetgroup/engidoor-alb-back-tg-tf/ca7def0d6a966beb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:listener/app/engidoor-back-alb-tf/1b6efea128013704/5fcb547f709fb647",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:loadbalancer/app/engidoor-back-alb-tf/1b6efea128013704",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.engidoor-back-alb-tf",
            "aws_lb_target_group.engidoor-alb-back-tg-tf",
            "aws_security_group.engidoor-alb-sg-tf",
            "aws_subnet.engidoor-back-subnet-1a-tf",
            "aws_subnet.engidoor-back-subnet-1c-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "engidoor-http-listener-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:listener/app/engidoor-alb-tf/e5238dfdb4c195d2/832bb2eeab971ff7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:targetgroup/engidoor-alb-front-tg-tf/94bde655fe678972",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:listener/app/engidoor-alb-tf/e5238dfdb4c195d2/832bb2eeab971ff7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:loadbalancer/app/engidoor-alb-tf/e5238dfdb4c195d2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.engidoor-alb-tf",
            "aws_lb_target_group.engidoor-alb-front-tg-tf",
            "aws_security_group.engidoor-alb-sg-tf",
            "aws_subnet.engidoor-front-subnet-1a-tf",
            "aws_subnet.engidoor-front-subnet-1c-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "engidoor-alb-back-tg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:targetgroup/engidoor-alb-back-tg-tf/ca7def0d6a966beb",
            "arn_suffix": "targetgroup/engidoor-alb-back-tg-tf/ca7def0d6a966beb",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 60,
                "matcher": "200",
                "path": "/api/v1/health_check",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 50,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:targetgroup/engidoor-alb-back-tg-tf/ca7def0d6a966beb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "engidoor-alb-back-tg-tf",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-052dd800d5475d1c3"
          },
          "dependencies": [
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "engidoor-alb-front-tg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:targetgroup/engidoor-alb-front-tg-tf/94bde655fe678972",
            "arn_suffix": "targetgroup/engidoor-alb-front-tg-tf/94bde655fe678972",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 150,
                "matcher": "200",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 120,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:547789976793:targetgroup/engidoor-alb-front-tg-tf/94bde655fe678972",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "engidoor-alb-front-tg-tf",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-052dd800d5475d1c3"
          },
          "dependencies": [
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Table_for_engidoor-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:547789976793:route-table/rtb-0d312ac191c1638fb",
            "id": "rtb-0d312ac191c1638fb",
            "owner_id": "547789976793",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-052dd800d5475d1c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "engidoor-back-route-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:547789976793:route-table/rtb-0886fe5f7610c5bc8",
            "id": "rtb-0886fe5f7610c5bc8",
            "owner_id": "547789976793",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd9c5c784013131a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "engidoor-back-route-tf"
            },
            "tags_all": {
              "Name": "engidoor-back-route-tf"
            },
            "vpc_id": "vpc-052dd800d5475d1c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.engidoor-igw-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "engidoor-front-route-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:547789976793:route-table/rtb-0965459dc0f81da3b",
            "id": "rtb-0965459dc0f81da3b",
            "owner_id": "547789976793",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd9c5c784013131a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "engidoor-front-route-tf"
            },
            "tags_all": {
              "Name": "engidoor-front-route-tf"
            },
            "vpc_id": "vpc-052dd800d5475d1c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.engidoor-igw-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "engidoor-back-route-1a-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd392436d251a46f",
            "route_table_id": "rtb-0886fe5f7610c5bc8",
            "subnet_id": "subnet-039a1710852bb7139"
          },
          "dependencies": [
            "aws_route_table.engidoor-back-route-tf",
            "aws_subnet.engidoor-back-subnet-1a-tf",
            "aws_vpc.engidoor-vpc-tf",
            "aws_internet_gateway.engidoor-igw-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "engidoor-back-route-1c-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083ef55f411aa6921",
            "route_table_id": "rtb-0886fe5f7610c5bc8",
            "subnet_id": "subnet-0d18332c424b061b4"
          },
          "dependencies": [
            "aws_route_table.engidoor-back-route-tf",
            "aws_subnet.engidoor-back-subnet-1c-tf",
            "aws_vpc.engidoor-vpc-tf",
            "aws_internet_gateway.engidoor-igw-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "engidoor-front-route-1a-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019ff8299f2645931",
            "route_table_id": "rtb-0965459dc0f81da3b",
            "subnet_id": "subnet-017a96f486d44fda4"
          },
          "dependencies": [
            "aws_subnet.engidoor-front-subnet-1a-tf",
            "aws_vpc.engidoor-vpc-tf",
            "aws_internet_gateway.engidoor-igw-tf",
            "aws_route_table.engidoor-front-route-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "engidoor-front-route-1c-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c2f36c8348c16dd",
            "route_table_id": "rtb-0965459dc0f81da3b",
            "subnet_id": "subnet-02bc59638682d063a"
          },
          "dependencies": [
            "aws_internet_gateway.engidoor-igw-tf",
            "aws_route_table.engidoor-front-route-tf",
            "aws_subnet.engidoor-front-subnet-1c-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "engidoor-alb-sg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:547789976793:security-group/sg-0b709e3614f70f375",
            "description": "ALB security group for engidoor tf",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "engidoor-alb-sg-rule3-tf",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b709e3614f70f375",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "0.0.0.0/16"
                ],
                "description": "engidoor-alb-sg-rule1-tf",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "0.0.0.0/16"
                ],
                "description": "engidoor-alb-sg-rule2-tf",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "engidoor-alb-sg-rule4-tf",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "engidoor-alb-sg-rule5-tf",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "engidoor-alb-sg-rule6-tf",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "engidoor-alb-sg-tf",
            "name_prefix": "",
            "owner_id": "547789976793",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-052dd800d5475d1c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "engidoor-ecs-sg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:547789976793:security-group/sg-030813512d39d7d69",
            "description": "ECS security group for engidoor tf",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "engidoor-ecs-sg-rule2-tf",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030813512d39d7d69",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "engidoor-ecs-sg-rule1-tf",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "engidoor-ecs-sg-rule3-tf",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "engidoor-ecs-sg-rule4-tf",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "engidoor-ecs-sg-rule6-tf",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "engidoor-ecs-sg-rule7-tf",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "engidoor-ecs-sg-rule5-tf",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b709e3614f70f375"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "engidoor-ecs-sg-tf",
            "name_prefix": "",
            "owner_id": "547789976793",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-052dd800d5475d1c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "engidoor-rds-sg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:547789976793:security-group/sg-06065190553bdb0d8",
            "description": "RDS security group for engidoor tf",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "engidoor-rds-sg-rule2-tf",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "engidoor-rds-sg-rule3-tf",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06065190553bdb0d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "0.0.0.0/16"
                ],
                "description": "engidoor-rds-sg-rule1-tf",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "engidoor-rds-sg-rule4-tf",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b709e3614f70f375"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "engidoor-rds-sg-tf",
            "name_prefix": "",
            "owner_id": "547789976793",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-052dd800d5475d1c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-alb-sg-rule1-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0",
              "0.0.0.0/16"
            ],
            "description": "engidoor-alb-sg-rule1-tf",
            "from_port": 80,
            "id": "sgrule-3066605059",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b709e3614f70f375",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-alb-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-alb-sg-rule2-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0",
              "0.0.0.0/16"
            ],
            "description": "engidoor-alb-sg-rule2-tf",
            "from_port": 443,
            "id": "sgrule-404833317",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b709e3614f70f375",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-alb-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-alb-sg-rule3-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "engidoor-alb-sg-rule3-tf",
            "from_port": 0,
            "id": "sgrule-758220983",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b709e3614f70f375",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-alb-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-alb-sg-rule4-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "engidoor-alb-sg-rule4-tf",
            "from_port": 8,
            "id": "sgrule-2899319848",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0b709e3614f70f375",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-alb-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-alb-sg-rule5-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "engidoor-alb-sg-rule5-tf",
            "from_port": 5000,
            "id": "sgrule-3432083870",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b709e3614f70f375",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-alb-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-alb-sg-rule6-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "engidoor-alb-sg-rule6-tf",
            "from_port": 3000,
            "id": "sgrule-965163878",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b709e3614f70f375",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-alb-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-ecs-sg-rule1-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "engidoor-ecs-sg-rule1-tf",
            "from_port": 8,
            "id": "sgrule-3759499087",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-030813512d39d7d69",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-ecs-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-ecs-sg-rule2-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "engidoor-ecs-sg-rule2-tf",
            "from_port": 0,
            "id": "sgrule-2246819246",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-030813512d39d7d69",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-ecs-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-ecs-sg-rule3-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "engidoor-ecs-sg-rule3-tf",
            "from_port": 80,
            "id": "sgrule-2313030",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-030813512d39d7d69",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-ecs-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-ecs-sg-rule4-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "engidoor-ecs-sg-rule4-tf",
            "from_port": 443,
            "id": "sgrule-3775795786",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-030813512d39d7d69",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-ecs-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-ecs-sg-rule5-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "engidoor-ecs-sg-rule5-tf",
            "from_port": 0,
            "id": "sgrule-1981887335",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-030813512d39d7d69",
            "self": false,
            "source_security_group_id": "sg-0b709e3614f70f375",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-alb-sg-tf",
            "aws_security_group.engidoor-ecs-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-ecs-sg-rule6-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "engidoor-ecs-sg-rule6-tf",
            "from_port": 3000,
            "id": "sgrule-3863229473",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-030813512d39d7d69",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-ecs-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-ecs-sg-rule7-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "engidoor-ecs-sg-rule7-tf",
            "from_port": 5000,
            "id": "sgrule-324173529",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-030813512d39d7d69",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.engidoor-vpc-tf",
            "aws_security_group.engidoor-ecs-sg-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-rds-sg-rule1-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0",
              "0.0.0.0/16"
            ],
            "description": "engidoor-rds-sg-rule1-tf",
            "from_port": 3306,
            "id": "sgrule-2055433145",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06065190553bdb0d8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-rds-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-rds-sg-rule2-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "engidoor-rds-sg-rule2-tf",
            "from_port": 0,
            "id": "sgrule-3597265358",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06065190553bdb0d8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-rds-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-rds-sg-rule3-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "engidoor-rds-sg-rule3-tf",
            "from_port": 0,
            "id": "sgrule-4195403099",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06065190553bdb0d8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-rds-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "engidoor-rds-sg-rule4-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "engidoor-rds-sg-rule4-tf",
            "from_port": 3306,
            "id": "sgrule-4275955363",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06065190553bdb0d8",
            "self": false,
            "source_security_group_id": "sg-0b709e3614f70f375",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engidoor-alb-sg-tf",
            "aws_security_group.engidoor-rds-sg-tf",
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "engidoor-back-subnet-1a-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:547789976793:subnet/subnet-039a1710852bb7139",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-039a1710852bb7139",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "547789976793",
            "tags": {
              "Name": "engidoor-back-subnet-1a-tf"
            },
            "tags_all": {
              "Name": "engidoor-back-subnet-1a-tf"
            },
            "vpc_id": "vpc-052dd800d5475d1c3"
          },
          "dependencies": [
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "engidoor-back-subnet-1c-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:547789976793:subnet/subnet-0d18332c424b061b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.4.0/24",
            "id": "subnet-0d18332c424b061b4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "547789976793",
            "tags": {
              "Name": "engidoor-back-subnet-1c-tf"
            },
            "tags_all": {
              "Name": "engidoor-back-subnet-1c-tf"
            },
            "vpc_id": "vpc-052dd800d5475d1c3"
          },
          "dependencies": [
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "engidoor-front-subnet-1a-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:547789976793:subnet/subnet-017a96f486d44fda4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-017a96f486d44fda4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "547789976793",
            "tags": {
              "Name": "engidoor-front-subnet-1a-tf"
            },
            "tags_all": {
              "Name": "engidoor-front-subnet-1a-tf"
            },
            "vpc_id": "vpc-052dd800d5475d1c3"
          },
          "dependencies": [
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "engidoor-front-subnet-1c-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:547789976793:subnet/subnet-02bc59638682d063a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-02bc59638682d063a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "547789976793",
            "tags": {
              "Name": "engidoor-front-subnet-1c-tf"
            },
            "tags_all": {
              "Name": "engidoor-front-subnet-1c-tf"
            },
            "vpc_id": "vpc-052dd800d5475d1c3"
          },
          "dependencies": [
            "aws_vpc.engidoor-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "engidoor-vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:547789976793:vpc/vpc-052dd800d5475d1c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03e7c82cf8e04688c",
            "default_route_table_id": "rtb-033bbbbde2881aaca",
            "default_security_group_id": "sg-0094ae62ebf34dc45",
            "dhcp_options_id": "dopt-07859760",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-052dd800d5475d1c3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-033bbbbde2881aaca",
            "owner_id": "547789976793",
            "tags": {
              "Name": "engidoor-vpc-tf"
            },
            "tags_all": {
              "Name": "engidoor-vpc-tf"
            }
          }
        }
      ]
    }
  ]
}